--- a/main.html
+++ b/main.html
@@ -219,11 +219,11 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <p class="text-center">お、どうやら鬼を倒せたようだな！<br>
+              あとは島から脱出するだけだ！ヨットの部品が倉庫にあるようだが、鍵がかかっている。<br>
+              暗証番号を下の問題を解いて導き出してほしい！</p>
             <figure class="image__container">
-              <img src="assets/images/直した.001.jpeg" alt="">
+              <img src="assets/images/修正.001.jpeg" alt="">
             </figure>
           </div>
         </section>
