--- a/main.html
+++ b/main.html
@@ -219,7 +219,7 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">お、どうやら鬼を倒せたようだな！<br>
+            <p class="text-center">どうやら鬼を倒せたようだな！<br>
               あとは島から脱出するだけだ！ヨットの部品が倉庫にあるようだが、鍵がかかっている。<br>
               暗証番号を下の問題を解いて導き出してほしい！</p>
             <figure class="image__container">
