--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">紙とペンを用意しよう！</h3>
-              <p class="card__content">メモをとるための紙と筆記用具をお手元にご準備ください。</p>
+              <h3 class="card__title">紙とペンを用意しよう！自分で時間をはかろう。</h3>
+              <p class="card__content">メモをとるための紙と筆記用具をお手元にご準備ください。時計を見て自分で20分の時間をはかってゲームをスタートしよう。</p>
             </div>
           </div>
           <div class="column">
